--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-dom": "18.2.0",
     "sass": "^1.58.3",
     "swiper": "^9.0.5"
+  },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
