--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
     "sass": "^1.58.3",
     "swiper": "^9.0.5"
