--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@vercel/analytics": "^1.0.1",
+    "@vercel/speed-insights": "^1.1.0",
     "emailjs": "^4.0.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
