--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.2",
     "sass": "^1.58.3",
+    "sharp": "^0.33.5",
     "swiper": "^9.0.5"
   },
   "devDependencies": {
